V1 Controller film (surement pas fonctionnel, a tester sur Postman et correction par la suite). Retrait du glboal middleware (aprés test et relecture, ca l'appliquait sur TOUTES les routes. Global, oui..) Correction d'une erreur de nom de methode dans le repository / interface et d'une faute de frappe dans le nommage du fichier (Inferface)
